// GRPC description for ms mail

syntax = "proto3";

option java_multiple_files = true;
option java_package = "clicrdv.io.followmailservice";
option java_outer_classname = "ClicRdvFollowMailServiceProto";

package followmailservice;

service ClicRdvFollowMailService {
  rpc NotifySentMail(ClicRdvFollowMail) returns (SendMailStatus) {}
}

message ClicRdvFollowMail {
  string email = 1;
  string event = 2;
  string uuid = 3;
  string group_id = 4;

}

message SendMailStatus {
  string status = 1;
}
